# cpp-owl-solver

./: CMakeLists.txt  README.md  findowl.cmake  owl.pc.cmake
docs/: Doxyfile
include/: CMakeLists.txt  client_world_connection.hpp  solver_aggregator_connection.hpp  solver_world_connection.hpp
src/: CMakeLists.txt  client_world_connection.cpp  solver_aggregator_connection.cpp  solver_world_connection.cpp
